[gd_scene load_steps=2 format=3 uid="uid://cyvbwenxwvij5"]

[ext_resource type="Script" uid="uid://dhiiccfjrwv85" path="res://addons/dsinventory/inventory/slot_ui.gd" id="1_mjioy"]

[node name="Slot" type="TextureRect"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
expand_mode = 1
script = ExtResource("1_mjioy")

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 68.0
offset_right = 53.0
offset_bottom = 91.0
text = "Test"

[node name="Quantity" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
color = Color(0.329158, 0.329158, 0.329158, 1)

[node name="MenuPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="Drop" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -15.5
offset_right = 23.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Drop"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="MenuPanel" to="." method="_on_menu_panel_mouse_exited"]
[connection signal="pressed" from="MenuPanel/Drop" to="." method="_on_drop_pressed"]
